# rust-actix-web

./: .env  .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
entity/: Cargo.toml
entity/src/: post.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_post_table.rs  m20250703_135737_create_user_table.rs
src/: main.rs
src/routes/: auth_routes.rs  file_routes.rs  home_routes.rs  mod.rs  post_routes.rs  user_routes.rs  websocket_routes.rs
src/routes/handlers/: auth_handler.rs  file_handler.rs  home_handler.rs  mod.rs  post_handler.rs  user_handler.rs  websocket_handler.rs
src/routes/middlewares/: auth_middlewares.rs
src/utils/: api_response.rs  app_state.rs  constants.rs  jwt.rs
