[package]
name = "curd-app"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4"
serde = "1.0.219"
serde_json = "1.0.140"
env_logger = "0.11.8"
dotenv = "0.15.0"
lazy_static = "1.5.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sha256 = "1.6.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
actix-web-lab = "0.24.1"